# EU-ZEVAM

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md.license  CONTRIBUTING.md  CONTRIBUTING.md.license  LICENSE  LICENSE.md  README.md  REUSE.toml  battery_electric_vehicle_stock_shares_eu_27_and_norway_up_to_2050_model_reference_scenario_.png.license  config.yaml  dlr_logo.png.license  gitlab-ci.yml  main.py  model_european_passenger_car_stock.py  paper.bib  paper.md  pyproject.toml  run_model.py  run_tests.py  stock_model_requirements.txt  stock_model_requirements.txt.license  test.sh
Tests/: test_1_1_required_input_files_exist.py  test_1_2_print_input_dimensions.py  test_1_required_input_files_exist.py  test_2_1_input_csvs_have_no_missing_data.py  test_2_2_country_cluster_combinations_are_correct.py  test_2_3_all_files_have_consistent_country_coverage.py  test_2_4_each_country_and_or_powertrain_has_consistent_number_of_rows.py  test_2_5_relative_sales_sums_to_one_per_country_year.py  test_2_input_csvs_have_no_missing_data.py  test_3_model_outputs_expected_files.py  test_4_model_runs_on_minimal_input_single_country.py
inputs/: 0_country_clusters.csv  0_country_labels.csv  1_1_new_registrations_by_fuel_type_1970_2050_clusters.csv  1_1_new_registrations_by_fuel_type_clusters_sources.csv  1_2_A_2_historical_new_registrations_data_passenger_cars.csv.license  1_2_A_2_new_registrations_data_passenger_cars_eu_countries_1970_2021.csv  1_2_A_2_new_registrations_data_passenger_cars_eu_countries_1970_2021_sources.csv  1_3_new_registrations_2022_2050_projected.csv  2_1_A_1_age_resolved_data_passenger_car_stock_fleet.csv  2_1_A_1_age_resolved_data_passenger_car_stock_fleet_eu_countries_2021.csv  2_1_A_3_empirical_survival_rates_eu_countries_2021.csv  2_2_A_1_stock_year.csv  4_1_eafo_ev_new_registration_shares.csv  4_2_eafo_ev_stock_shares.csv  5_1_oguchi_2008_survival_rate_parameters.csv  5_2_held_2016_survival_rates.csv  5_2_held_2016_survival_rates.csv.license
outputs/: 1_1_absolute_registrations.csv  1_2_registrations_by_powertrain.csv  2_1_optimum_parameters_csp_curves.csv  2_2_empirical_survival_rates_eu_countries_2021.csv  (+4 more)
(+296 files in other folders)
