# SPDX-FileCopyrightText: 2025 German Aerospace Center, Gabriel Möring-Martínez
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zevampy"
version = "0.1.0"
authors = [
  { name="Gabriel Möring-Martínez", email="gabriel.moeringmartinez@dlr.de" },
]
description = "zevampy: Zero Emission Vehicle Adoption model in Python"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gabrielmoringmartinez/EU-ZEVAM"
Issues = "https://github.com/gabrielmoringmartinez/EU-ZEVAM/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]