# SPDX-FileCopyrightText: 2025 German Aerospace Center, Gabriel Möring-Martínez
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zevampy"
version = "1.2.3"
authors = [
  { name="Gabriel Möring-Martínez", email="gabriel.moeringmartinez@dlr.de" },
]
description = "ZEVAMPY: Zero Emission Vehicle Adoption model in Python"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.12"

dependencies = [
    "pandas>=2.3",
    "scipy>=1.15",
    "matplotlib>=3.10",
    "PyYAML>=6.0",
]


keywords = [
    "vehicle-stock-model",
    "electric-vehicles",
    "transport-model",
    "survival-analysis",
    "fleet-modelling",
    "energy-transition",
]

[project.urls]
Homepage = "https://github.com/gabrielmoringmartinez/zevampy"
Issues = "https://github.com/gabrielmoringmartinez/zevampy/issues"
Repository = "https://github.com/gabrielmoringmartinez/zevampy/zevampy.git"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
zevampy = "zevampy.cli:main"